gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.11.5-unescaped-braces.sarif
{
  "version": "2.1.0",
  "runs": [{
    "tool": { "driver": { "name": "example" } },
    "results": [
      { "message": { "text" : "before {} after" }, /* { dg-error "unescaped '\\\{' within message string \\\[SARIF v2.1.0 ยง3.11.5\\\]" } */
      	"locations": [] }
    ]
  }]
}

/* { dg-begin-multiline-output "" }
    6 |       { "message": { "text" : "before {} after" },
      |                               ^~~~~~~~~~~~~~~~~
   { dg-end-multiline-output ""  }  */
